infrastructure/kubernetes/core/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: core
  labels:
    ida.io/role: core
